# mcnuggies-wager-protocol

./: Cargo.toml  README.md
src/: lib.rs
src/instructions/: claim_remaining_treasury.rs  commit_bet.rs  initialize_game.rs  mod.rs  reclaim_bet_on_timeout.rs  reveal_and_claim.rs  submit_results.rs  withdraw_unpaid_bet.rs
