[package]
name = "nug-wager-protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"  # Add a license (e.g., MIT, Apache-2.0)
repository = "https://github.com/adrian-kong/mcnuggies-wager-protocol"

[lib]
crate-type = ["cdylib", "lib"]
name = "nug_wager_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", default-features = false }

